zlang_compiler/zlang_compiler/yacc.output
Terminals unused in grammar

   CONDITION_OR


State 51 conflicts: 3 reduce/reduce
State 102 conflicts: 3 shift/reduce
State 103 conflicts: 3 shift/reduce
State 109 conflicts: 3 shift/reduce
State 115 conflicts: 2 shift/reduce
State 143 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 183 conflicts: 3 shift/reduce
State 184 conflicts: 3 shift/reduce
State 199 conflicts: 32 reduce/reduce
State 206 conflicts: 32 reduce/reduce
State 209 conflicts: 32 reduce/reduce
State 210 conflicts: 32 reduce/reduce
State 212 conflicts: 32 reduce/reduce
State 213 conflicts: 32 reduce/reduce
State 226 conflicts: 1 shift/reduce
State 228 conflicts: 2 shift/reduce
State 229 conflicts: 1 shift/reduce
State 230 conflicts: 3 shift/reduce
State 232 conflicts: 3 shift/reduce
State 233 conflicts: 3 shift/reduce
State 237 conflicts: 3 shift/reduce
State 239 conflicts: 1 shift/reduce
State 251 conflicts: 2 shift/reduce
State 265 conflicts: 3 shift/reduce
State 266 conflicts: 1 shift/reduce
State 267 conflicts: 1 shift/reduce
State 286 conflicts: 3 shift/reduce
State 288 conflicts: 3 shift/reduce
State 301 conflicts: 1 shift/reduce
State 302 conflicts: 23 reduce/reduce
State 315 conflicts: 1 shift/reduce
State 331 conflicts: 3 shift/reduce
State 333 conflicts: 2 shift/reduce
State 357 conflicts: 1 shift/reduce
State 358 conflicts: 6 shift/reduce
State 359 conflicts: 6 shift/reduce, 1 reduce/reduce
State 360 conflicts: 6 shift/reduce, 1 reduce/reduce
State 361 conflicts: 6 shift/reduce, 1 reduce/reduce
State 362 conflicts: 6 shift/reduce, 1 reduce/reduce
State 363 conflicts: 6 shift/reduce, 1 reduce/reduce
State 364 conflicts: 6 shift/reduce, 1 reduce/reduce
State 365 conflicts: 2 shift/reduce
State 368 conflicts: 1 shift/reduce
State 370 conflicts: 1 shift/reduce
State 372 conflicts: 1 shift/reduce
State 380 conflicts: 1 shift/reduce
State 382 conflicts: 1 shift/reduce
State 390 conflicts: 3 shift/reduce
State 391 conflicts: 3 shift/reduce
State 397 conflicts: 1 shift/reduce
State 398 conflicts: 1 shift/reduce
State 402 conflicts: 3 shift/reduce
State 404 conflicts: 1 shift/reduce
State 430 conflicts: 3 shift/reduce
State 439 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_parts

    2 program_parts: program_part
    3              | newlines program_part
    4              | program_parts program_part
    5              | program_parts newlines program_part

    6 program_part: class
    7             | global_function
    8             | import_directive
    9             | include_directive
   10             | import_path_directive
   11             | include_path_directive
   12             | compiler_flags_directive
   13             | add_cpp_directive
   14             | entry_point_directive
   15             | cpp_operator

   16 import_directive: UNIX_IMPORT string_exp
   17                 | WINDOWS_IMPORT string_exp
   18                 | WINDOWS_IMPORT string_exp COMMA string_exp
   19                 | LINUX_IMPORT string_exp
   20                 | MACOSX_IMPORT string_exp

   21 include_directive: INCLUDE string_exp
   22                  | LINUX_INCLUDE string_exp
   23                  | WINDOWS_INCLUDE string_exp
   24                  | MACOSX_INCLUDE string_exp
   25                  | UNIX_INCLUDE string_exp

   26 import_path_directive: UNIX_IMPORT_PATH string_exp
   27                      | WINDOWS_IMPORT_PATH string_exp
   28                      | LINUX_IMPORT_PATH string_exp
   29                      | MACOSX_IMPORT_PATH string_exp

   30 include_path_directive: WINDOWS_INCLUDE_PATH string_exp
   31                       | UNIX_INCLUDE_PATH string_exp
   32                       | LINUX_INCLUDE_PATH string_exp
   33                       | MACOSX_INCLUDE_PATH string_exp
   34                       | INCLUDE_PATH string_exp

   35 compiler_flags_directive: MACOSX_COMPILER_FLAGS string_exp
   36                         | UNIX_COMPILER_FLAGS string_exp
   37                         | LINUX_COMPILER_FLAGS string_exp

   38 entry_point_directive: CPP_ENTRY_POINT string_exp

   39 add_cpp_directive: ADD_CPP string_exp

   40 class: class_decl newlines functions_and_properties

   41 class_decl: id_class_exp
   42           | id_class_exp COLON id_class_exp
   43           | id_class_exp COLON CPP_INHERIT PARENS_START section_exp id_exp PARENS_END
   44           | class_type id_class_exp
   45           | class_type id_class_exp COLON id_class_exp

   46 class_type: SINGLETON

   47 section_exp: PRIVATE
   48            | PUBLIC

   49 section_type: PRIVATE newlines
   50             | PUBLIC newlines

   51 functions_and_properties: function_or_property
   52                         | functions_and_properties function_or_property
   53                         | functions_and_properties newlines function_or_property

   54 function_parameters_annotation: function_parameter_annotation
   55                               | function_parameters_annotation function_parameter_annotation

   56 global_function: global_function_impl
   57                | function_parameters_annotation global_function_impl

   58 global_function_impl: id_exp parameters global_function_commands
   59                     | id_exp global_function_commands

   60 function_or_property: code_level_exp fps

   61 fps: code_level_exp function
   62    | code_level_exp property
   63    | section_type
   64    | comment
   65    | code_level_exp comment
   66    | code_level_exp method_parameter_annotation
   67    | code_level_exp cpp_declaration

   68 property: id_exp OPERATOR_EQUAL right_equal_part newlines
   69         | id_exp OPERATOR_EQUAL function_call newlines

   70 newlines: NEWLINE
   71         | comment
   72         | newlines NEWLINE
   73         | newlines comment

   74 function: id_func_exp parameters function_commands
   75         | id_func_exp function_commands

   76 function_commands: newlines commands

   77 global_function_commands: newlines global_func_commands

   78 parameters: id_exp
   79           | out_var_exp
   80           | parameters id_exp
   81           | parameters out_var_exp

   82 var: id_exp
   83    | my_prop_exp
   84    | base_prop_exp
   85    | prop_exp
   86    | func_result_prop_exp

   87 commands: code_levels command
   88         | commands code_levels command
   89         | commands comment command

   90 global_func_commands: global_code_levels command
   91                     | global_func_commands global_code_levels command
   92                     | global_func_commands comment command

   93 command: cmd

   94 cmd: if_operator
   95    | else_operator
   96    | while_operator
   97    | for_operator
   98    | foreach_operator
   99    | break_operator
  100    | continue_operator
  101    | command_simple newlines
  102    | comment
  103    | cpp_operator

  104 function_call: prop_method_call
  105              | internal_method_call
  106              | var_method_call
  107              | standard_function_call
  108              | base_method_call

  109 prop_method_call: my_prop_exp props_in_call function_call_parameters_with_parens
  110                 | prop_exp props_in_call function_call_parameters_with_parens

  111 internal_method_call: ME props_in_call function_call_parameters_with_parens
  112                     | ME props_in_call PARENS_START PARENS_END

  113 var_method_call: id_exp props_in_call function_call_parameters_with_parens
  114                | id_exp props_in_call PARENS_START PARENS_END

  115 standard_function_call: id_exp function_call_parameters_with_parens
  116                       | id_exp PARENS_START PARENS_END

  117 base_method_call: BASE props_in_call function_call_parameters_with_parens
  118                 | BASE props_in_call PARENS_START PARENS_END

  119 props_in_call: DOT id_exp
  120              | props_in_call DOT id_exp

  121 function_call_parameters_with_parens: PARENS_START function_call_parameters PARENS_END
  122                                     | PARENS_START function_call_parameters PARENS_END DOT object_exp
  123                                     | PARENS_START PARENS_END DOT object_exp

  124 object_exp: OBJECT

  125 function_call_parameters: right_equal_part
  126                         | function_call_parameters right_equal_part

  127 code_levels: code_level3_exp
  128            | code_levels code_level_exp
  129            | code_levels code_level3_exp

  130 global_code_levels: code_level_exp
  131                   | code_level3_exp
  132                   | global_code_levels code_level_exp
  133                   | global_code_levels code_level3_exp

  134 math_unary_exp: var OPERATOR_INCREMENT
  135               | var OPERATOR_DECREMENT

  136 command_simple: math_unary_exp
  137               | making_equal_simple
  138               | OPERATOR_RETURN condition
  139               | OPERATOR_RETURN condition COMMA return_props
  140               | function_call

  141 return_props: id_exp
  142             | return_props COMMA id_exp

  143 array_element_var: var
  144                  | array_element

  145 array_element: array_element_var SQUARE_BRACKET_START right_equal_part SQUARE_BRACKET_END
  146              | array_element_var SQUARE_BRACKET_START SQUARE_BRACKET_END

  147 making_equal_simple: left_equal_part OPERATOR_EQUAL right_equal_part
  148                    | left_equal_part operator_change_value right_equal_part
  149                    | left_equal_part OPERATOR_CONCAT string_right_part

  150 operator_change_value: OPERATOR_PLUS_EQUAL
  151                      | OPERATOR_MINUS_EQUAL
  152                      | OPERATOR_MULTIPLY_EQUAL
  153                      | OPERATOR_DIVISION_EQUAL
  154                      | OPERATOR_AND_EQUAL
  155                      | OPERATOR_OR_EQUAL
  156                      | OPERATOR_XOR_EQUAL

  157 left_equal_part: var
  158                | array_element

  159 id_exp: id_func_exp
  160       | id_class_exp

  161 id_func_exp: ID_FUNC

  162 id_class_exp: ID_CLASS

  163 code_level_exp: CODE_LEVEL

  164 code_level3_exp: CODE_LEVEL3

  165 number_exp: NUMBER

  166 fp_simple_number_exp: FP_NUMBER

  167 fp_number_exp: fp_simple_number_exp
  168              | FP_ARB_NUMBER
  169              | FLOAT_DECL COMPARE_LESS number_exp COMPARE_MORE PARENS_START math_exp PARENS_END
  170              | FLOAT_DECL COMPARE_LESS number_exp COMPARE_MORE
  171              | FIXED_DECL COMPARE_LESS number_exp COMPARE_MORE PARENS_START math_exp PARENS_END
  172              | FIXED_DECL COMPARE_LESS number_exp COMPARE_MORE

  173 hex_number_exp: HEX_NUMBER

  174 string_right_part: var
  175                  | array_element
  176                  | string_exp
  177                  | SYMBOL
  178                  | function_call

  179 right_equal_part_min: math_exp
  180                     | number_exp
  181                     | function_call
  182                     | fp_number_exp
  183                     | hex_number_exp
  184                     | var
  185                     | array_element
  186                     | string_exp
  187                     | SYMBOL
  188                     | boolean_var

  189 right_equal_part: one_line_if_operator
  190                 | right_equal_part_min
  191                 | condition
  192                 | constructor

  193 constructor: id_exp PARENS_START constructor_params PARENS_END

  194 constructor_params: constructor_parameter
  195                   | constructor_params COMMA constructor_parameter

  196 constructor_parameter: id_exp COLON right_equal_part_min

  197 string_exp: STRING

  198 plus_exp: math_exp
  199         | string_exp
  200         | function_call

  201 math_exp: math_unary_exp
  202         | operand
  203         | PARENS_START operand PARENS_END
  204         | PARENS_START math_exp PARENS_END
  205         | math_exp OPERATOR_MINUS math_exp
  206         | plus_exp OPERATOR_PLUS plus_exp
  207         | math_exp OPERATOR_MULTIPLY math_exp
  208         | math_exp OPERATOR_DIVISION math_exp
  209         | math_exp OPERATOR_MATH_AND math_exp
  210         | math_exp OPERATOR_MATH_OR math_exp
  211         | math_exp OPERATOR_MATH_XOR math_exp

  212 operand: number_exp
  213        | fp_number_exp
  214        | hex_number_exp
  215        | SYMBOL
  216        | var
  217        | array_element

  218 boolean_var: VAL_TRUE
  219            | VAL_FALSE

  220 condition: right_equal_part_min
  221          | condition condition_operator condition
  222          | right_equal_part_min COMPARE_EQUAL right_equal_part_min
  223          | right_equal_part_min COMPARE_NOT_EQUAL right_equal_part_min
  224          | right_equal_part_min COMPARE_LESS right_equal_part_min
  225          | right_equal_part_min COMPARE_MORE right_equal_part_min
  226          | right_equal_part_min COMPARE_LESS_EQUAL right_equal_part_min
  227          | right_equal_part_min COMPARE_MORE_EQUAL right_equal_part_min
  228          | PARENS_START condition PARENS_END

  229 condition_operator: OR
  230                   | AND

  231 if_operator: IF condition newlines

  232 one_line_if_operator: condition QUESTION_SIGN right_equal_part COLON right_equal_part
  233                     | PARENS_START one_line_if_operator PARENS_END

  234 else_operator: ELSE newlines

  235 break_operator: BREAK newlines

  236 continue_operator: CONTINUE newlines

  237 while_operator: WHILE condition newlines

  238 for_operator: FOR initializations END_PART condition END_PART comma_commands_for

  239 comma_commands_for: comma_commands newlines

  240 comma_commands: command_simple
  241               | comma_commands COMMA command_simple

  242 initializations: making_equal_simple
  243                | initializations COMMA making_equal_simple

  244 func_result_prop_exp: function_call props_in_call

  245 my_prop_exp: ME props_in_call
  246            | ME

  247 base_prop_exp: BASE props_in_call
  248              | BASE

  249 prop_exp: id_exp props_in_call
  250         | array_element props_in_call

  251 out_var_exp: OUT_SPEC id_exp

  252 comment: singleline_comment_exp
  253        | multiline_comment_exp newlines

  254 singleline_comment_exp: SINGLELINE_COMMENT

  255 multiline_comment_exp: MULTILINE_COMMENT

  256 foreach_operator: FOREACH id_exp IN_CONSTRUCT id_exp newlines

  257 cpp_declaration: cpp_exp newlines

  258 cpp_operator: cpp_exp newlines

  259 cpp_exp: CPP

  260 method_parameter_annotation: DOG id_exp newlines method_annotation_properties
  261                            | DOG OPERATOR_RETURN newlines method_annotation_properties

  262 method_annotation_properties: code_level3_exp id_exp COLON annotation_value newlines
  263                             | code_level3_exp id_exp COLON annotation_value newlines method_annotation_properties

  264 function_parameter_annotation: DOG id_exp newlines function_annotation_properties
  265                              | DOG OPERATOR_RETURN newlines function_annotation_properties

  266 function_annotation_properties: code_level_exp id_exp COLON annotation_value newlines
  267                               | code_level_exp id_exp COLON annotation_value newlines function_annotation_properties

  268 annotation_value: string_exp
  269                 | number_exp
  270                 | annotation_values

  271 annotation_values: id_exp
  272                  | id_exp annotation_values


Terminals, with rules where they appear

$end (0) 0
error (256)
HEX_NUMBER (258) 173
FP_NUMBER (259) 166
NUMBER (260) 165
ID_FUNC (261) 161
ID_CLASS (262) 162
WHILE (263) 237
IF (264) 231
FOR (265) 238
OR (266) 229
AND (267) 230
NEWLINE (268) 70 72
CODE_LEVEL (269) 163
SQUARE_BRACKET_START (270) 145 146
SQUARE_BRACKET_END (271) 145 146
OPERATOR_EQUAL (272) 68 69 147
OPERATOR_INCREMENT (273) 134
OPERATOR_DECREMENT (274) 135
OPERATOR_MINUS (275) 205
OPERATOR_PLUS (276) 206
OPERATOR_MULTIPLY (277) 207
OPERATOR_DIVISION (278) 208
COMPARE_LESS (279) 169 170 171 172 224
COMPARE_MORE (280) 169 170 171 172 225
COMPARE_EQUAL (281) 222
COMPARE_NOT_EQUAL (282) 223
CONDITION_OR (283)
END_PART (284) 238
SYMBOL (285) 177 187 215
COMMA (286) 18 139 142 195 241 243
VAL_TRUE (287) 218
VAL_FALSE (288) 219
OPERATOR_RETURN (289) 138 139 261 265
PARENS_START (290) 43 112 114 116 118 121 122 123 169 171 193 203 204
    228 233
PARENS_END (291) 43 112 114 116 118 121 122 123 169 171 193 203 204
    228 233
OPERATOR_PLUS_EQUAL (292) 150
OPERATOR_MINUS_EQUAL (293) 151
OPERATOR_MULTIPLY_EQUAL (294) 152
OPERATOR_DIVISION_EQUAL (295) 153
COMPARE_LESS_EQUAL (296) 226
COMPARE_MORE_EQUAL (297) 227
STRING (298) 197
PRIVATE (299) 47 49
PUBLIC (300) 48 50
SINGLETON (301) 46
CODE_LEVEL3 (302) 164
DOT (303) 119 120 122 123
ME (304) 111 112 245 246
OPERATOR_CONCAT (305) 149
BASE (306) 117 118 247 248
OUT_SPEC (307) 251
MULTILINE_COMMENT (308) 255
SINGLELINE_COMMENT (309) 254
ELSE (310) 234
FOREACH (311) 256
IN_CONSTRUCT (312) 256
CPP (313) 259
UNIX_IMPORT (314) 16
WINDOWS_IMPORT (315) 17 18
LINUX_IMPORT (316) 19
MACOSX_IMPORT (317) 20
INCLUDE (318) 21
LINUX_INCLUDE (319) 22
WINDOWS_INCLUDE (320) 23
MACOSX_INCLUDE (321) 24
UNIX_INCLUDE (322) 25
UNIX_IMPORT_PATH (323) 26
WINDOWS_IMPORT_PATH (324) 27
LINUX_IMPORT_PATH (325) 28
MACOSX_IMPORT_PATH (326) 29
WINDOWS_INCLUDE_PATH (327) 30
UNIX_INCLUDE_PATH (328) 31
LINUX_INCLUDE_PATH (329) 32
MACOSX_INCLUDE_PATH (330) 33
ADD_CPP (331) 39
BREAK (332) 235
CONTINUE (333) 236
QUESTION_SIGN (334) 232
COLON (335) 42 43 45 196 232 262 263 266 267
DOG (336) 260 261 264 265
CPP_INHERIT (337) 43
OBJECT (338) 124
INCLUDE_PATH (339) 34
UNIX_COMPILER_FLAGS (340) 36
LINUX_COMPILER_FLAGS (341) 37
MACOSX_COMPILER_FLAGS (342) 35
CPP_ENTRY_POINT (343) 38
OPERATOR_MATH_AND (344) 209
OPERATOR_MATH_OR (345) 210
OPERATOR_MATH_XOR (346) 211
OPERATOR_AND_EQUAL (347) 154
OPERATOR_OR_EQUAL (348) 155
OPERATOR_XOR_EQUAL (349) 156
FP_ARB_NUMBER (350) 168
FLOAT_DECL (351) 169 170
FIXED_DECL (352) 171 172


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
program (99)
    on left: 1, on right: 0
program_parts (100)
    on left: 2 3 4 5, on right: 1 4 5
program_part (101)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 2 3 4 5
import_directive (102)
    on left: 16 17 18 19 20, on right: 8
include_directive (103)
    on left: 21 22 23 24 25, on right: 9
import_path_directive (104)
    on left: 26 27 28 29, on right: 10
include_path_directive (105)
    on left: 30 31 32 33 34, on right: 11
compiler_flags_directive (106)
    on left: 35 36 37, on right: 12
entry_point_directive (107)
    on left: 38, on right: 14
add_cpp_directive (108)
    on left: 39, on right: 13
class (109)
    on left: 40, on right: 6
class_decl (110)
    on left: 41 42 43 44 45, on right: 40
class_type (111)
    on left: 46, on right: 44 45
section_exp (112)
    on left: 47 48, on right: 43
section_type (113)
    on left: 49 50, on right: 63
functions_and_properties (114)
    on left: 51 52 53, on right: 40 52 53
function_parameters_annotation (115)
    on left: 54 55, on right: 55 57
global_function (116)
    on left: 56 57, on right: 7
global_function_impl (117)
    on left: 58 59, on right: 56 57
function_or_property (118)
    on left: 60, on right: 51 52 53
fps (119)
    on left: 61 62 63 64 65 66 67, on right: 60
property (120)
    on left: 68 69, on right: 62
newlines (121)
    on left: 70 71 72 73, on right: 3 5 40 49 50 53 68 69 72 73 76
    77 101 231 234 235 236 237 239 253 256 257 258 260 261 262 263
    264 265 266 267
function (122)
    on left: 74 75, on right: 61
function_commands (123)
    on left: 76, on right: 74 75
global_function_commands (124)
    on left: 77, on right: 58 59
parameters (125)
    on left: 78 79 80 81, on right: 58 74 80 81
var (126)
    on left: 82 83 84 85 86, on right: 134 135 143 157 174 184 216
commands (127)
    on left: 87 88 89, on right: 76 88 89
global_func_commands (128)
    on left: 90 91 92, on right: 77 91 92
command (129)
    on left: 93, on right: 87 88 89 90 91 92
cmd (130)
    on left: 94 95 96 97 98 99 100 101 102 103, on right: 93
function_call (131)
    on left: 104 105 106 107 108, on right: 69 140 178 181 200 244
prop_method_call (132)
    on left: 109 110, on right: 104
internal_method_call (133)
    on left: 111 112, on right: 105
var_method_call (134)
    on left: 113 114, on right: 106
standard_function_call (135)
    on left: 115 116, on right: 107
base_method_call (136)
    on left: 117 118, on right: 108
props_in_call (137)
    on left: 119 120, on right: 109 110 111 112 113 114 117 118 120
    244 245 247 249 250
function_call_parameters_with_parens (138)
    on left: 121 122 123, on right: 109 110 111 113 115 117
object_exp (139)
    on left: 124, on right: 122 123
function_call_parameters (140)
    on left: 125 126, on right: 121 122 126
code_levels (141)
    on left: 127 128 129, on right: 87 88 128 129
global_code_levels (142)
    on left: 130 131 132 133, on right: 90 91 132 133
math_unary_exp (143)
    on left: 134 135, on right: 136 201
command_simple (144)
    on left: 136 137 138 139 140, on right: 101 240 241
return_props (145)
    on left: 141 142, on right: 139 142
array_element_var (146)
    on left: 143 144, on right: 145 146
array_element (147)
    on left: 145 146, on right: 144 158 175 185 217 250
making_equal_simple (148)
    on left: 147 148 149, on right: 137 242 243
operator_change_value (149)
    on left: 150 151 152 153 154 155 156, on right: 148
left_equal_part (150)
    on left: 157 158, on right: 147 148 149
id_exp (151)
    on left: 159 160, on right: 43 58 59 68 69 78 80 82 113 114 115
    116 119 120 141 142 193 196 249 251 256 260 262 263 264 266 267
    271 272
id_func_exp (152)
    on left: 161, on right: 74 75 159
id_class_exp (153)
    on left: 162, on right: 41 42 43 44 45 160
code_level_exp (154)
    on left: 163, on right: 60 61 62 65 66 67 128 130 132 266 267
code_level3_exp (155)
    on left: 164, on right: 127 129 131 133 262 263
number_exp (156)
    on left: 165, on right: 169 170 171 172 180 212 269
fp_simple_number_exp (157)
    on left: 166, on right: 167
fp_number_exp (158)
    on left: 167 168 169 170 171 172, on right: 182 213
hex_number_exp (159)
    on left: 173, on right: 183 214
string_right_part (160)
    on left: 174 175 176 177 178, on right: 149
right_equal_part_min (161)
    on left: 179 180 181 182 183 184 185 186 187 188, on right: 190
    196 220 222 223 224 225 226 227
right_equal_part (162)
    on left: 189 190 191 192, on right: 68 125 126 145 147 148 232
constructor (163)
    on left: 193, on right: 192
constructor_params (164)
    on left: 194 195, on right: 193 195
constructor_parameter (165)
    on left: 196, on right: 194 195
string_exp (166)
    on left: 197, on right: 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 176 186 199 268
plus_exp (167)
    on left: 198 199 200, on right: 206
math_exp (168)
    on left: 201 202 203 204 205 206 207 208 209 210 211, on right:
    169 171 179 198 204 205 207 208 209 210 211
operand (169)
    on left: 212 213 214 215 216 217, on right: 202 203
boolean_var (170)
    on left: 218 219, on right: 188
condition (171)
    on left: 220 221 222 223 224 225 226 227 228, on right: 138 139
    191 221 228 231 232 237 238
condition_operator (172)
    on left: 229 230, on right: 221
if_operator (173)
    on left: 231, on right: 94
one_line_if_operator (174)
    on left: 232 233, on right: 189 233
else_operator (175)
    on left: 234, on right: 95
break_operator (176)
    on left: 235, on right: 99
continue_operator (177)
    on left: 236, on right: 100
while_operator (178)
    on left: 237, on right: 96
for_operator (179)
    on left: 238, on right: 97
comma_commands_for (180)
    on left: 239, on right: 238
comma_commands (181)
    on left: 240 241, on right: 239 241
initializations (182)
    on left: 242 243, on right: 238 243
func_result_prop_exp (183)
    on left: 244, on right: 86
my_prop_exp (184)
    on left: 245 246, on right: 83 109
base_prop_exp (185)
    on left: 247 248, on right: 84
prop_exp (186)
    on left: 249 250, on right: 85 110
out_var_exp (187)
    on left: 251, on right: 79 81
comment (188)
    on left: 252 253, on right: 64 65 71 73 89 92 102
singleline_comment_exp (189)
    on left: 254, on right: 252
multiline_comment_exp (190)
    on left: 255, on right: 253
foreach_operator (191)
    on left: 256, on right: 98
cpp_declaration (192)
    on left: 257, on right: 67
cpp_operator (193)
    on left: 258, on right: 15 103
cpp_exp (194)
    on left: 259, on right: 257 258
method_parameter_annotation (195)
    on left: 260 261, on right: 66
method_annotation_properties (196)
    on left: 262 263, on right: 260 261 263
function_parameter_annotation (197)
    on left: 264 265, on right: 54 55
function_annotation_properties (198)
    on left: 266 267, on right: 264 265 267
annotation_value (199)
    on left: 268 269 270, on right: 262 263 266 267
annotation_values (200)
    on left: 271 272, on right: 270 272


State 0

    0 $accept: . program $end

    ID_FUNC                shift, and go to state 1
    ID_CLASS               shift, and go to state 2
    NEWLINE                shift, and go to state 3
    SINGLETON              shift, and go to state 4
    MULTILINE_COMMENT      shift, and go to state 5
    SINGLELINE_COMMENT     shift, and go to state 6
    CPP                    shift, and go to state 7
    UNIX_IMPORT            shift, and go to state 8
    WINDOWS_IMPORT         shift, and go to state 9
    LINUX_IMPORT           shift, and go to state 10
    MACOSX_IMPORT          shift, and go to state 11
    INCLUDE                shift, and go to state 12
    LINUX_INCLUDE          shift, and go to state 13
    WINDOWS_INCLUDE        shift, and go to state 14
    MACOSX_INCLUDE         shift, and go to state 15
    UNIX_INCLUDE           shift, and go to state 16
    UNIX_IMPORT_PATH       shift, and go to state 17
    WINDOWS_IMPORT_PATH    shift, and go to state 18
    LINUX_IMPORT_PATH      shift, and go to state 19
    MACOSX_IMPORT_PATH     shift, and go to state 20
    WINDOWS_INCLUDE_PATH   shift, and go to state 21
    UNIX_INCLUDE_PATH      shift, and go to state 22
    LINUX_INCLUDE_PATH     shift, and go to state 23
    MACOSX_INCLUDE_PATH    shift, and go to state 24
    ADD_CPP                shift, and go to state 25
    DOG                    shift, and go to state 26
    INCLUDE_PATH           shift, and go to state 27
    UNIX_COMPILER_FLAGS    shift, and go to state 28
    LINUX_COMPILER_FLAGS   shift, and go to state 29
    MACOSX_COMPILER_FLAGS  shift, and go to state 30
    CPP_ENTRY_POINT        shift, and go to state 31

    program                         go to state 32
    program_parts                   go to state 33
    program_part                    go to state 34
    import_directive                go to state 35
    include_directive               go to state 36
    import_path_directive           go to state 37
    include_path_directive          go to state 38
    compiler_flags_directive        go to state 39
    entry_point_directive           go to state 40
    add_cpp_directive               go to state 41
    class                           go to state 42
    class_decl                      go to state 43
    class_type                      go to state 44
    function_parameters_annotation  go to state 45
    global_function                 go to state 46
    global_function_impl            go to state 47
    newlines                        go to state 48
    id_exp                          go to state 49
    id_func_exp                     go to state 50
    id_class_exp                    go to state 51
    comment                         go to state 52
    singleline_comment_exp          go to state 53
    multiline_comment_exp           go to state 54
    cpp_operator                    go to state 55
    cpp_exp                         go to state 56
    function_parameter_annotation   go to state 57


State 1

  161 id_func_exp: ID_FUNC .

    $default  reduce using rule 161 (id_func_exp)


State 2

  162 id_class_exp: ID_CLASS .

    $default  reduce using rule 162 (id_class_exp)


State 3

   70 newlines: NEWLINE .

    $default  reduce using rule 70 (newlines)


State 4

   46 class_type: SINGLETON .

    $default  reduce using rule 46 (class_type)


State 5

  255 multiline_comment_exp: MULTILINE_COMMENT .

    $default  reduce using rule 255 (multiline_comment_exp)


State 6

  254 singleline_comment_exp: SINGLELINE_COMMENT .

    $default  reduce using rule 254 (singleline_comment_exp)


State 7

  259 cpp_exp: CPP .

    $default  reduce using rule 259 (cpp_exp)


State 8

   16 import_directive: UNIX_IMPORT . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 59


State 9

   17 import_directive: WINDOWS_IMPORT . string_exp
   18                 | WINDOWS_IMPORT . string_exp COMMA string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 60


State 10

   19 import_directive: LINUX_IMPORT . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 61


State 11

   20 import_directive: MACOSX_IMPORT . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 62


State 12

   21 include_directive: INCLUDE . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 63


State 13

   22 include_directive: LINUX_INCLUDE . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 64


State 14

   23 include_directive: WINDOWS_INCLUDE . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 65


State 15

   24 include_directive: MACOSX_INCLUDE . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 66


State 16

   25 include_directive: UNIX_INCLUDE . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 67


State 17

   26 import_path_directive: UNIX_IMPORT_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 68


State 18

   27 import_path_directive: WINDOWS_IMPORT_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 69


State 19

   28 import_path_directive: LINUX_IMPORT_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 70


State 20

   29 import_path_directive: MACOSX_IMPORT_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 71


State 21

   30 include_path_directive: WINDOWS_INCLUDE_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 72


State 22

   31 include_path_directive: UNIX_INCLUDE_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 73


State 23

   32 include_path_directive: LINUX_INCLUDE_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 74


State 24

   33 include_path_directive: MACOSX_INCLUDE_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 75


State 25

   39 add_cpp_directive: ADD_CPP . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 76


State 26

  264 function_parameter_annotation: DOG . id_exp newlines function_annotation_properties
  265                              | DOG . OPERATOR_RETURN newlines function_annotation_properties

    ID_FUNC          shift, and go to state 1
    ID_CLASS         shift, and go to state 2
    OPERATOR_RETURN  shift, and go to state 77

    id_exp        go to state 78
    id_func_exp   go to state 50
    id_class_exp  go to state 79


State 27

   34 include_path_directive: INCLUDE_PATH . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 80


State 28

   36 compiler_flags_directive: UNIX_COMPILER_FLAGS . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 81


State 29

   37 compiler_flags_directive: LINUX_COMPILER_FLAGS . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 82


State 30

   35 compiler_flags_directive: MACOSX_COMPILER_FLAGS . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 83


State 31

   38 entry_point_directive: CPP_ENTRY_POINT . string_exp

    STRING  shift, and go to state 58

    string_exp  go to state 84


State 32

    0 $accept: program . $end

    $end  shift, and go to state 85


State 33

    1 program: program_parts .
    4 program_parts: program_parts . program_part
    5              | program_parts . newlines program_part

    ID_FUNC                shift, and go to state 1
    ID_CLASS               shift, and go to state 2
    NEWLINE                shift, and go to state 3
    SINGLETON              shift, and go to state 4
    MULTILINE_COMMENT      shift, and go to state 5
    SINGLELINE_COMMENT     shift, and go to state 6
    CPP                    shift, and go to state 7
    UNIX_IMPORT            shift, and go to state 8
    WINDOWS_IMPORT         shift, and go to state 9
    LINUX_IMPORT           shift, and go to state 10
    MACOSX_IMPORT          shift, and go to state 11
    INCLUDE                shift, and go to state 12
    LINUX_INCLUDE          shift, and go to state 13
    WINDOWS_INCLUDE        shift, and go to state 14
    MACOSX_INCLUDE         shift, and go to state 15
    UNIX_INCLUDE           shift, and go to state 16
    UNIX_IMPORT_PATH       shift, and go to state 17
    WINDOWS_IMPORT_PATH    shift, and go to state 18
    LINUX_IMPORT_PATH      shift, and go to state 19
    MACOSX_IMPORT_PATH     shift, and go to state 20
    WINDOWS_INCLUDE_PATH   shift, and go to state 21
    UNIX_INCLUDE_PATH      shift, and go to state 22
    LINUX_INCLUDE_PATH     shift, and go to state 23
